--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require": {
         "illuminate/contracts": "^8.83|^9.30",
+        "laraxot/module_cms": "*",
         "laraxot/module_xot": "dev-master",
         "phpdocumentor/type-resolver": "^1.5",
         "spatie/laravel-package-tools": "^1.9.0"
