--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,9 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [{
+        "type": "composer",
+        "url": "https://wire-elements-pro.composer.sh"
+    }]
 }
