--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "lodash": "^4.17.21",
     "postcss": "^8.3.7",
     "vite": "^3.0.9"
+  },
+  "dependencies": {
+    "laravel-mix": "^6.0.49"
   }
 }
