--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,8 @@
 
     "require": {
         "illuminate/contracts": "^8.83|^9.30|^10.0",
-        "illuminate/support": "*",
         "laraxot/module_cms": "*",
-        "laraxot/module_xot": "*",
-        "phpdocumentor/type-resolver": "^1.5",
-        "spatie/laravel-package-tools": "^1.9.0"
+        "laraxot/module_xot": "*"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
