--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
         }
     },
     "require": {
-        "illuminate/contracts": "^8.83|^9.30",
+        "illuminate/contracts": "^9.0|^10.0",
+        "illuminate/support": "^9.12|^10.0",
         "laraxot/module_cms": "*",
         "laraxot/module_xot": "dev-master",
         "phpdocumentor/type-resolver": "^1.5",
-        "spatie/laravel-package-tools": "^1.9.0"
+        "spatie/laravel-package-tools": "^1.11.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
